kubernetes/apps/base/garage-system/garage-operator/instance/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-s3
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - garage.woodleighschool.net
  rules:
    - backendRefs:
        - name: garage
          port: 3900
